--- a/Turnaround/src/MainWindow.ui
+++ b/Turnaround/src/MainWindow.ui
@@ -18,6 +18,10 @@
   <property name="windowTitle" >
    <string>Turnaround</string>
   </property>
+  <property name="windowIcon" >
+   <iconset resource="images.qrc" >
+    <normaloff>:/icons/images/segmentation.svg</normaloff>:/icons/images/segmentation.svg</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget" />
   <widget class="QMenuBar" name="menubar" >
    <property name="geometry" >
@@ -25,7 +29,7 @@
      <x>0</x>
      <y>0</y>
      <width>640</width>
-     <height>26</height>
+     <height>28</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile" >
@@ -103,7 +107,8 @@
   </widget>
   <action name="fileOpenAction" >
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/fileopen.png</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/fileopen.png</normaloff>:/icons/images/fileopen.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Open</string>
@@ -117,7 +122,8 @@
   </action>
   <action name="fileExitAction" >
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/exit.png</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/exit.png</normaloff>:/icons/images/exit.png</iconset>
    </property>
    <property name="text" >
     <string>E&amp;xit</string>
@@ -128,7 +134,8 @@
   </action>
   <action name="playbackPlayAction" >
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/player_play.png</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/player_play.png</normaloff>:/icons/images/player_play.png</iconset>
    </property>
    <property name="text" >
     <string>Play</string>
@@ -139,7 +146,8 @@
   </action>
   <action name="playbackStopAction" >
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/player_stop.png</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/player_stop.png</normaloff>:/icons/images/player_stop.png</iconset>
    </property>
    <property name="text" >
     <string>Stop</string>
@@ -150,7 +158,8 @@
   </action>
   <action name="playbackPauseAction" >
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/player_pause.png</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/player_pause.png</normaloff>:/icons/images/player_pause.png</iconset>
    </property>
    <property name="text" >
     <string>Pause</string>
@@ -158,7 +167,8 @@
   </action>
   <action name="helpOnlineTutorialAction" >
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/help.png</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/help.png</normaloff>:/icons/images/help.png</iconset>
    </property>
    <property name="text" >
     <string>Online &amp;tutorial</string>
@@ -169,7 +179,8 @@
   </action>
   <action name="helpWhatsThisAction" >
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/contexthelp.png</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/contexthelp.png</normaloff>:/icons/images/contexthelp.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;What's this</string>
@@ -188,7 +199,8 @@
     <bool>true</bool>
    </property>
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/polarchromapeaks.svg</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/polarchromapeaks.svg</normaloff>:/icons/images/polarchromapeaks.svg</iconset>
    </property>
    <property name="text" >
     <string>Chroma &amp;Peaks</string>
@@ -199,7 +211,8 @@
     <bool>true</bool>
    </property>
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/tonnetz.svg</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/tonnetz.svg</normaloff>:/icons/images/tonnetz.svg</iconset>
    </property>
    <property name="text" >
     <string>&amp;Tonnetz</string>
@@ -210,7 +223,8 @@
     <bool>true</bool>
    </property>
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/keyspace.svg</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/keyspace.svg</normaloff>:/icons/images/keyspace.svg</iconset>
    </property>
    <property name="text" >
     <string>&amp;Key Space</string>
@@ -221,7 +235,8 @@
     <bool>true</bool>
    </property>
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/chordranking.svg</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/chordranking.svg</normaloff>:/icons/images/chordranking.svg</iconset>
    </property>
    <property name="text" >
     <string>Chord &amp;Ranking</string>
@@ -232,7 +247,8 @@
     <bool>true</bool>
    </property>
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/segmentation.svg</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/segmentation.svg</normaloff>:/icons/images/segmentation.svg</iconset>
    </property>
    <property name="text" >
     <string>&amp;Segmentation</string>
@@ -243,10 +259,26 @@
     <bool>true</bool>
    </property>
    <property name="icon" >
-    <iconset resource="images.qrc" >:/icons/images/spectrogram.svg</iconset>
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/spectrogram.svg</normaloff>:/icons/images/spectrogram.svg</iconset>
    </property>
    <property name="text" >
     <string>Spectrogram</string>
+   </property>
+  </action>
+  <action name="actionRealTimeCapture" >
+   <property name="checkable" >
+    <bool>true</bool>
+   </property>
+   <property name="enabled" >
+    <bool>false</bool>
+   </property>
+   <property name="icon" >
+    <iconset resource="images.qrc" >
+     <normaloff>:/icons/images/mix_microphone.png</normaloff>:/icons/images/mix_microphone.png</iconset>
+   </property>
+   <property name="text" >
+    <string>Real time capture</string>
    </property>
   </action>
  </widget>
