--- a/Chordata/src/MainWindow.ui
+++ b/Chordata/src/MainWindow.ui
@@ -16,7 +16,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle" >
-   <string>Turnaround</string>
+   <string>Chordata</string>
   </property>
   <property name="windowIcon" >
    <iconset resource="images.qrc" >
