--- a/trunk/Chordata/src/About.ui
+++ b/trunk/Chordata/src/About.ui
@@ -82,7 +82,7 @@
         <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
 &lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-weight:600;">Turnaround v%1&lt;/span> &lt;/p>
+&lt;p style=" margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-weight:600;">Chordata v%1&lt;/span> &lt;/p>
 &lt;p style=" margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Based on CLAM v%2&lt;/p>&lt;/body>&lt;/html></string>
        </property>
       </widget>
@@ -142,7 +142,7 @@ p, li { white-space: pre-wrap; }
           </sizepolicy>
          </property>
          <property name="text" >
-          <string>Turnaround is a tool for tonal analysis of audio files. It can analyse a song and show the chords played.</string>
+          <string>Chordata is a tool for tonal analysis of audio files. It can analyse a song and show the chords played.</string>
          </property>
          <property name="alignment" >
           <set>Qt::AlignTop</set>
@@ -285,7 +285,7 @@ p, li { white-space: pre-wrap; }
          <property name="text" >
           <string>&lt;p>This software is partially founded by:&lt;/p>
 &lt;ul>
-&lt;li>Google - Turnaround was originally a Google Summer of Code project&lt;/li>
+&lt;li>Google - Chordata was originally a Google Summer of Code project&lt;/li>
 &lt;/ul></string>
          </property>
          <property name="alignment" >
