* MIDIPianoWidget: MIDI monitor (to be used in the future also as midi note generator) * piano.svg

--- a/NetworkEditor/src/images.qrc
+++ b/NetworkEditor/src/images.qrc
@@ -758,6 +758,7 @@
     <file>images/lau_logo.png</file>
     <file>images/clear_left.png</file>
     <file>images/reload.svg</file>
+    <file>images/piano.svg</file>
   </qresource>
   <qresource prefix="/interfaces" >
     <file>prototyper/DefaultInterface.ui</file>
