* Inserted an AggregationEditor at the bottom of the ProjectEditor

--- a/Annotator/src/ProjectEditor.ui
+++ b/Annotator/src/ProjectEditor.ui
@@ -339,7 +339,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="8" column="1">
+   <item row="9" column="1">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
@@ -356,8 +356,25 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
+   <item row="8" column="1">
+    <widget class="AggregationEditor" name="treeWidget"/>
+   </item>
+   <item row="8" column="0">
+    <widget class="QLabel" name="label_9">
+     <property name="text">
+      <string>Mappings</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>AggregationEditor</class>
+   <extends>QTreeWidget</extends>
+   <header>AggregationEditor.hxx</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="images.qrc"/>
  </resources>
