* SourceEditor.ui: Not implemented buttons disabled  * ProjectEditor.ui: Not implemented buttons disabled  * ProjectEditor.ui: Relayout as grid to expand the maps view  * ProjectEditor.ui: Fix regression: on adding maps header, programed ones didn't appear

--- a/Annotator/src/SourceEditor.ui
+++ b/Annotator/src/SourceEditor.ui
@@ -186,20 +186,6 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="0">
-    <widget class="QPushButton" name="checkExtractorButton">
-     <property name="toolTip">
-      <string>Execute with a sample wave</string>
-     </property>
-     <property name="text">
-      <string>Check extractor</string>
-     </property>
-     <property name="icon">
-      <iconset resource="images.qrc">
-       <normaloff>:/icons/images/gear.png</normaloff>:/icons/images/gear.png</iconset>
-     </property>
-    </widget>
-   </item>
    <item row="6" column="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
@@ -212,6 +198,9 @@
    </item>
    <item row="6" column="1">
     <widget class="QPushButton" name="schemaEditButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="toolTip">
       <string>View resulting schema</string>
      </property>
@@ -224,8 +213,38 @@
      </property>
     </widget>
    </item>
+   <item row="6" column="0">
+    <widget class="QPushButton" name="checkExtractorButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="toolTip">
+      <string>Execute with a sample wave</string>
+     </property>
+     <property name="text">
+      <string>Check extractor</string>
+     </property>
+     <property name="icon">
+      <iconset resource="images.qrc">
+       <normaloff>:/icons/images/gear.png</normaloff>:/icons/images/gear.png</iconset>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>sourceName</tabstop>
+  <tabstop>extractor</tabstop>
+  <tabstop>extractorBrowseButton</tabstop>
+  <tabstop>schema</tabstop>
+  <tabstop>schemaBrowseButton</tabstop>
+  <tabstop>suffix</tabstop>
+  <tabstop>loadConfigurationButton</tabstop>
+  <tabstop>configurationInfo</tabstop>
+  <tabstop>checkExtractorButton</tabstop>
+  <tabstop>schemaEditButton</tabstop>
+  <tabstop>buttonBox</tabstop>
+ </tabstops>
  <resources>
   <include location="images.qrc"/>
  </resources>
