--- a/Annotator/src/ProjectEditor.ui
+++ b/Annotator/src/ProjectEditor.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>746</width>
-    <height>637</height>
+    <width>685</width>
+    <height>599</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Project Properties</string>
   </property>
-  <layout class="QFormLayout" name="formLayout">
+  <layout class="QGridLayout" name="gridLayout" columnstretch="1,6">
    <item row="0" column="0">
     <widget class="QLabel" name="label_5">
      <property name="text">
@@ -96,6 +96,12 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <widget class="QTextEdit" name="projectInfo">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="html">
        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
@@ -117,7 +123,14 @@ p, li { white-space: pre-wrap; }
        <bool>false</bool>
       </property>
      </widget>
-     <widget class="QTextBrowser" name="htmlPreview"/>
+     <widget class="QTextBrowser" name="htmlPreview">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
     </widget>
    </item>
    <item row="4" column="0">
@@ -127,23 +140,13 @@ p, li { white-space: pre-wrap; }
        <property name="text">
         <string>Sources:</string>
        </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+       </property>
        <property name="buddy">
         <cstring>sources</cstring>
        </property>
       </widget>
-     </item>
-     <item>
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
      </item>
      <item>
       <widget class="QPushButton" name="newSourceButton">
@@ -171,11 +174,12 @@ p, li { white-space: pre-wrap; }
    </item>
    <item row="4" column="1">
     <widget class="QListWidget" name="sources">
-     <item>
-      <property name="text">
-       <string>Chords</string>
-      </property>
-     </item>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>142</height>
+      </size>
+     </property>
     </widget>
    </item>
    <item row="5" column="0">
@@ -214,6 +218,9 @@ p, li { white-space: pre-wrap; }
      </item>
      <item>
       <widget class="QPushButton" name="testExtractorButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="toolTip">
         <string>Execute with a sample wave</string>
        </property>
@@ -228,6 +235,9 @@ p, li { white-space: pre-wrap; }
      </item>
      <item>
       <widget class="QPushButton" name="schemaEditButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="toolTip">
         <string>View resulting schema</string>
        </property>
@@ -275,6 +285,19 @@ p, li { white-space: pre-wrap; }
    <header>AggregationEditor.hxx</header>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>suffix</tabstop>
+  <tabstop>projectInfo</tabstop>
+  <tabstop>htmlPreview</tabstop>
+  <tabstop>newSourceButton</tabstop>
+  <tabstop>removeSource</tabstop>
+  <tabstop>sources</tabstop>
+  <tabstop>testExtractorButton</tabstop>
+  <tabstop>schemaEditButton</tabstop>
+  <tabstop>loadConfigurationButton</tabstop>
+  <tabstop>mappings</tabstop>
+  <tabstop>buttonBox</tabstop>
+ </tabstops>
  <resources>
   <include location="images.qrc"/>
  </resources>
@@ -286,8 +309,8 @@ p, li { white-space: pre-wrap; }
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>434</x>
-     <y>632</y>
+     <x>438</x>
+     <y>594</y>
     </hint>
     <hint type="destinationlabel">
      <x>10</x>
@@ -302,8 +325,8 @@ p, li { white-space: pre-wrap; }
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>527</x>
-     <y>632</y>
+     <x>531</x>
+     <y>594</y>
     </hint>
     <hint type="destinationlabel">
      <x>62</x>
